Fixed menu alignment issue Removed admin-left, praise admin-right! adjusted the 'footer-left' block flavour a bit; now let's make that Date a shared resource..

--- a/src/app/admin-grid/admin-grid.component.scss
+++ b/src/app/admin-grid/admin-grid.component.scss
@@ -4,11 +4,11 @@
 .grid {
 
     grid-template-rows: 8.5rem 1fr auto;
-    grid-template-columns: 1fr 1fr 32rem;
+    grid-template-columns: 1fr 1fr 26rem 6rem;
     grid-template-areas:
-        "top menu menu"
-        "main main main"
-        "footer footer footerclock";
+        "top menu menu menu"
+        "main main main rightbar"
+        "footer footer footerclock footerclock";
 
   .item {
 
@@ -16,9 +16,14 @@
       grid-area: main;
     }
 
+    &.rightbar {
+      grid-area: rightbar;
+    }
+
     &.footer {
       grid-area: footer;
     }
+
   }
 
 }
