--- a/src/app/home-grid/footer-left/footer-left.component.scss
+++ b/src/app/home-grid/footer-left/footer-left.component.scss
@@ -13,6 +13,7 @@ p {
         background: $gray;
         color: $dark;
         padding: .8rem;
+        text-align: center;
     }
 
     &.day {
