--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -7,6 +7,7 @@
         flex-direction: row;
         height: 100%;
         justify-content: flex-end;
+        margin-right: -.8rem;
     }
 
     &__block {
